--- a/ticketez/src/main/resources/application.properties
+++ b/ticketez/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.port=8081
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TicketEZ;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto = none
 
